feat: responsive home page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="./assets/img/profile.jpg" alt="profile image">
+                    <img src="./assets/img/profile.jpg" alt="profile image" loading="lazy">
                 </div>
             </div>
             <div class="right-header">
