--- a/index.html
+++ b/index.html
@@ -43,7 +43,100 @@
         </div>
     </header>
     <main>
-        <section class="section sec2 about" id="about"></section>
+        <section class="section sec2 about" id="about">
+            <div class="main-title">
+                <h2>About <span>me</span></h2>
+            </div>
+            <div class="about-container">
+                <h4>Information about me</h4>
+                <p>
+                    I have degree in Information Systems by the Federal University of Rio Grande do Norte and
+                    throughout my university period I was involved in several software development projects, mainly for
+                    web and mobile devices, in partnership with other university students, during the occasion, I had
+                    the opportunity to put into practice some skills required in the market such as: requirements
+                    analysis, software documentation, project versioning, agile methodologies, project standards and
+                    exposition of expected and achieved results.
+                    <br />
+                    <br />
+                    In addition to developing an app for a local clothing store, I worked on a personal project for a
+                    period of 6 months, which consisted of an app capable of managing customers and sales for small and
+                    micro-entrepreneurs. Currently, the program has two versions, one Free, available automatically to
+                    all users who register in the app, and another Premium, acquired through a subscription, which can
+                    be monthly, half-yearly or annually.
+                    <br />
+                    <br />
+                    I am currently developing some personal projects using JavaScript and TypeScript languages, which
+                    can be found at <a target="_blank" href="https://github.com/cristovaofabio">my github profile</a>.
+                </p>
+                <div class="btn-container">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download CV</span>
+                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    </a>
+                </div>
+            </div>
+            <div class="about-skills">
+                <h4 class="skill-title">My skills</h4>
+
+                <div class="skill-elements">
+                    <div class="skill-container">
+                        <div class="main-skill">
+                            <span class="skill-text">JavaScript</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-container">
+                        <div class="main-skill">
+                            <span class="skill-text">Flutter</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-container">
+                        <div class="main-skill">
+                            <span class="skill-text">Java</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-container">
+                        <div class="main-skill">
+                            <span class="skill-text">HTML</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-container">
+                        <div class="main-skill">
+                            <span class="skill-text">CSS</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-container">
+                        <div class="main-skill">
+                            <span class="skill-text">OOP</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-container">
+                        <div class="main-skill">
+                            <span class="skill-text">GIT</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-container">
+                        <div class="main-skill">
+                            <span class="skill-text">Android Studio</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-container">
+                        <div class="main-skill">
+                            <span class="skill-text">SQL</span>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 contact" id="contact"></section>
     </main>
