feat: about me section finished

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <div class="skill-container">
                         <div class="main-skill">
-                            <span class="skill-text">OOP</span>
+                            <span class="skill-text">Clean Code</span>
                         </div>
                     </div>
 
@@ -135,6 +135,39 @@
 
                 </div>
 
+            </div>
+            <h4 class="skill-title">Some certifications</h4>
+            <div class="about-certifications">
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-laptop-code"></i>
+                    </div>
+                    <p class="tl-duration">4 hours</p>
+                    <h5>Clean Code<span> - Udemy</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-laptop-code"></i>
+                    </div>
+                    <p class="tl-duration">300 hours</p>
+                    <h5>Responsive Web Design<span> - freeCodeCamp</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-laptop-code"></i>
+                    </div>
+                    <p class="tl-duration">300 hours</p>
+                    <h5>JavaScript Algorithms and Data Structures<span> - freeCodeCamp</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                    </p>
+                </div>
             </div>
         </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
