--- a/index.html
+++ b/index.html
@@ -170,7 +170,30 @@
                 </div>
             </div>
         </section>
-        <section class="section sec3 portfolio" id="portfolio"></section>
+        <section class="section sec3 portfolio" id="portfolio">
+            <div class="main-title">
+                <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
+            </div>
+            <p class="port-text">
+                Here is some of my work that I've done in various programming languages.
+            </p>
+            <div class="portfolios">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="./assets/img/api.jpeg" alt="some commands of a REST API" loading="lazy">
+                    </div>
+                    <div class="hover-items">
+                        <h3>REST API</h3>
+                        <div class="icons">
+                            <a target="_blank" href="https://github.com/cristovaofabio/REST-API" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
         <section class="section sec4 contact" id="contact"></section>
     </main>
     <div class="controls">
