feat: contact me section - finished

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
                     I'm a software developer, I love study about programming, technology innovations and business.
                 </p>
                 <div class="btn-container">
-                    <a href="" class="main-btn">
-                        <span class="btn-text">Download CV</span>
-                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    <a class="main-btn control" data-id="contact" rel="noopener noreferrer">
+                        Contact Me
                     </a>
                 </div>
             </div>
@@ -69,9 +68,8 @@
                     can be found at <a target="_blank" href="https://github.com/cristovaofabio">my github profile</a>.
                 </p>
                 <div class="btn-container">
-                    <a href="" class="main-btn">
-                        <span class="btn-text">Download CV</span>
-                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    <a class="main-btn control" data-id="contact" rel="noopener noreferrer">
+                        Contact Me
                     </a>
                 </div>
             </div>
@@ -194,7 +192,76 @@
             </div>
 
         </section>
-        <section class="section sec4 contact" id="contact"></section>
+        <section class="section sec4 contact" id="contact">
+            <div class="contact-container">
+                <div class="main-title">
+                    <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
+                </div>
+                <div class="contact-content-con">
+                    <div class="left-contact">
+                        <h4>Contact me here</h4>
+                        <p>
+                            If you have any questions feel free to get in touch with me!
+                        </p>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <span>Location</span>
+                                </div>
+                                <p>Acari-RN, Brazil</p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-envelope"></i>
+                                    <span>Email</span>
+                                </div>
+                                <p>
+                                    <span>cristovaofabio3@gmail.com</span>
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-user-graduate"></i>
+                                    <span>Education</span>
+                                </div>
+                                <p>
+                                    <span>Bachelor's degree in Information Systems</span>
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-globe-africa"></i>
+                                    <span>Languages</span>
+                                </div>
+                                <p>
+                                    <span>Portuguese, English</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="contact-icons">
+                            <div class="contact-icon">
+                                <a href="https://www.linkedin.com/in/cristovao-silva/" target="_blank">
+                                    <i class="fab fa-linkedin-in"></i>
+
+                                    <a href="https://www.facebook.com/profile.php?id=100082664382665" target="_blank">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                    <a href="https://twitter.com/cristovaofabi0" target="_blank">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                    <a href="https://github.com/cristovaofabio" target="_blank">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://www.codewars.com/users/cristovaofabio" target="_blank">
+                                        <i class="fas fa-code"></i>
+                                    </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <div class="controls">
         <div class="control control-1 active-btn" data-id="home">
