--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@
             <i class="fas fa-envelope"></i>
         </div>
     </div>
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
+    </div>
     <script src="./assets/js/app.js"></script>
 </body>
 
